@@ -1,7 +1,8 @@
-use crate::{cm::escape_inline, entity, markdown_to_html, Options};
+use crate::cm::{escape_inline, escape_link_destination};
+use crate::{entity, markdown_to_html, Options};
 
-/// Assert that the input escapes to the expected result, and that the expected
-/// result renders to HTML which displays the input text.
+/// Assert that the input text escapes to the expected result in inline context,
+/// and that the expected result renders to HTML which displays the input text.
 #[track_caller]
 fn assert_escape_inline(input: &str, expected: &str) {
     let actual = escape_inline(input);
@@ -35,25 +36,34 @@ fn escape_inline_baseline() {
     );
 }
 
-/// Assert a suitable method to escape [link destination]s.
+/// Assert that the URL is escaped as expected, and that the result is rendered
+/// into HTML in such a way that preserves the meaning of the input.
 ///
 /// [link destination]: https://spec.commonmark.org/0.31.2/#link-destination
 #[test]
 fn escape_link_target() {
     let url = "rabbits) <cup\rcakes\n> [hyacinth](";
-    let escaped = format!(
-        "<{}>",
-        url.replace("<", "\\<")
-            .replace(">", "\\>")
-            .replace("\n", "%0A")
-            .replace("\r", "%0D")
-    );
+    let escaped = r#"<rabbits) \<cup%0Dcakes%0A\> [hyacinth](>"#;
 
-    let md = format!("A [link]({escaped}).");
-    let html = markdown_to_html(&md, &Options::default());
+    assert_eq!(escaped, escape_link_destination(url));
 
+    let md = format!("[link]({escaped})");
+    let mut html = markdown_to_html(&md, &Options::default());
+    html = html
+        .strip_prefix("<p><a href=\"")
+        .expect("html should be one anchor in a paragraph")
+        .to_string();
+    html = html
+        .strip_suffix("\">link</a></p>\n")
+        .expect("html should be one anchor in a paragraph")
+        .to_string();
+
+    assert_eq!("rabbits)%20%3Ccup%0Dcakes%0A%3E%20%5Bhyacinth%5D(", html);
     assert_eq!(
-        "<p>A <a href=\"rabbits)%20%3Ccup%0Dcakes%0A%3E%20%5Bhyacinth%5D(\">link</a>.</p>\n",
-        html
+        url,
+        percent_encoding_rfc3986::percent_decode_str(&html)
+            .unwrap()
+            .decode_utf8()
+            .unwrap()
     );
 }
