@@ -5,6 +5,9 @@ New APIs:
 * `cm::escape_inline` (aliased at crate level as `escape_commonmark_inline`)
   is added; escapes input text suitable for inclusion in a CommonMark document
   where regular inline processing takes place.
+* `cm::escape_link_destination` (aliased at crate level as
+  `escape_commonmark_link_destination`) is added; escapes input URL suitable for
+  use as a link destination in a CommonMark document.
 
 Changed APIs:
 
